examples/test/conf/TLSRoute/MultiSNI/02_EdgionTls_alpha.yaml
# EdgionTls certificate for alpha.sandbox.example.com
apiVersion: edgion.io/v1
kind: EdgionTls
metadata:
  name: multi-sni-alpha
  namespace: edgion-test
spec:
  parentRefs:
    - name: tls-route-multi-sni-gw
      namespace: edgion-test
      sectionName: tls-multi
  hosts:
    - "alpha.sandbox.example.com"
  secretRef:
    name: edge-tls
    namespace: edgion-test
