examples/test/conf/TLSRoute/MultiSNI/03_TLSRoute_alpha.yaml
# TLSRoute for *.alpha.example.com -> TCP echo server
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: multi-sni-route-alpha
  namespace: edgion-test
spec:
  parentRefs:
    - name: tls-route-multi-sni-gw
      namespace: edgion-test
      sectionName: tls-multi
  hostnames:
    - "alpha.sandbox.example.com"
  rules:
    - backendRefs:
        - name: test-tcp
          port: 30010
          weight: 100
