examples/test/conf/TLSRoute/MultiSNI/EndpointSlice_test-tcp.yaml
# EndpointSlice for test-tcp echo server
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-tcp-slice
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-tcp
addressType: IPv4
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
ports:
  - port: 30010
    protocol: TCP
